@@ -1,11 +1,17 @@
 # Open Lakehouse with Iceberg V3: Lakekeeper, Spark, MinIO on Docker
 
+[![CI](https://github.com/Vadoid/open-lakehouse-demo/actions/workflows/ci.yml/badge.svg)](https://github.com/Vadoid/open-lakehouse-demo/actions/workflows/ci.yml)
+[![License: Apache 2.0](https://img.shields.io/badge/License-Apache_2.0-blue.svg)](LICENSE)
+
 Tech demo of an open lakehouse on Apache Iceberg **format-version 3**. One
 `terraform apply` brings up six containers on a single Docker network. SQL is
 driven through the Spark Thrift Server (HiveServer2 wire protocol on `:10000`),
 so `beeline` or any JDBC client works. A Next.js webapp on `:3030` drives the
 same SQL from the browser and shows live state in the object store, Lakekeeper,
-and the Iceberg snapshot log per step.
+and the Iceberg snapshot log per step. A second engine, **Apache Flink 1.20**,
+runs by default: it streams a continuous `datagen → Iceberg` job into the *same*
+Lakekeeper catalog and object store while Spark queries it, so the demo shows
+multi-engine interop on one source of truth.
 
 Storage is swappable. By default everything lands in MinIO, but the webapp's
 first-run setup screen can point the warehouse at Google Cloud Storage instead.
@@ -13,41 +19,56 @@ The UI relabels itself for whichever target is active. The diagram, file tree,
 lineage graph, and wrap-up all follow. See
 [Storage targets](#storage-targets-minio-or-gcs).
 
+For a themed view of what's landed lately — the Flink engine, swappable storage,
+the Apache-2.0 relicense, the webapp overhaul — see [CHANGELOG.md](CHANGELOG.md).
+
 ## Architecture
 
 ```mermaid
 flowchart TB
     user(("host&nbsp;:3030"))
     web["<b>demo-webapp</b><br/>Next.js&nbsp;15 · React&nbsp;18<br/><i>server routes do all I/O</i>"]
-    spark["<b>Spark&nbsp;Thrift&nbsp;Server</b><br/>HiveServer2&nbsp;wire<br/>apache/spark&nbsp;3.5.6<br/>iceberg-spark-runtime&nbsp;1.11.0"]
+    spark["<b>Spark&nbsp;Thrift&nbsp;Server</b><br/>HiveServer2&nbsp;wire<br/>apache/spark&nbsp;3.5.6<br/>iceberg-spark-runtime&nbsp;1.11.0<br/><i>batch — full V3 demo</i>"]
+    flink["<b>Flink&nbsp;1.20</b> <i>(default on)</i><br/>jobmanager + taskmanager<br/>iceberg-flink-runtime&nbsp;1.11.0<br/><i>streaming — datagen → Iceberg</i>"]
     lk["<b>Lakekeeper</b><br/>Iceberg&nbsp;REST&nbsp;catalog (Rust)<br/>v0.12.0 · authz: allow-all"]
     minio["<b>Object store</b><br/>MinIO (local) <i>or</i> GCS<br/>Parquet + Puffin"]
     pg["<b>Postgres&nbsp;15</b><br/>Lakekeeper metadata<br/><i>internal</i>"]
 
     user --> web
+    user -. ":8081 web UI" .-> flink
     web -- "JDBC :10000" --> spark
     web -- "REST :8181" --> lk
     web -- "S3 :9000 / GCS API" --> minio
     spark <-- "REST catalog" --> lk
+    flink <-. "REST catalog" .-> lk
     lk -. "SQL · 5432" .-> pg
     spark -- "S3FileIO / GCSFileIO" --> minio
+    flink -. "S3FileIO / GCSFileIO" .-> minio
 
     classDef web fill:#1e2a44,stroke:#7c8cc6,color:#dbe5ff
     classDef compute fill:#311e44,stroke:#a17ec6,color:#e9d8ff
     classDef catalog fill:#0f3340,stroke:#5fc4d3,color:#d6f4fa
     classDef storage fill:#3d2415,stroke:#d99868,color:#fbe2cf
     classDef hostnode fill:#1e293b,stroke:#475569,color:#cbd5e1
+    classDef optional fill:#1a3326,stroke:#5fb98a,color:#d6fae5
     class user hostnode
     class web web
     class spark compute
+    class flink optional
     class lk,pg catalog
     class minio storage
 ```
 
-Six containers on the `lakedemo` Docker network. Postgres holds Lakekeeper's
-metadata; MinIO holds Iceberg's data and metadata files; Lakekeeper hands
-out object-store paths and table snapshots; Spark Thrift executes the SQL; the
-webapp is a thin server that talks to all three at once.
+Six containers on the `lakedemo` Docker network (Postgres, MinIO, Lakekeeper,
+Spark Thrift, the webapp, plus the one-shot Lakekeeper migrate job). Postgres
+holds Lakekeeper's metadata; MinIO holds Iceberg's data and metadata files;
+Lakekeeper hands out object-store paths and table snapshots; Spark Thrift
+executes the SQL; the webapp is a thin server that talks to all three at once.
+
+Two more containers — **Flink jobmanager + taskmanager** (dashed above) — join
+only when you opt into the streaming engine at deploy time. They read and write
+the *same* Lakekeeper catalog and MinIO bucket as Spark. See
+[Flink streaming engine (on by default)](#flink-streaming-engine-on-by-default).
 
 In GCS mode a Google Cloud Storage bucket takes MinIO's place. Spark writes
 `gs://` paths through `GCSFileIO` (Iceberg's `ResolvingFileIO` picks the right
@@ -98,7 +119,134 @@ Docker daemon must already be running for the manual path. First Spark start
 downloads the Iceberg jars from Maven (needs internet); give it a minute or two
 before the Thrift Server accepts connections.
 
-Endpoints: **Webapp `:3030`**, Lakekeeper UI `:8181/ui/`, MinIO console `:9001`, Thrift JDBC `:10000`.
+Endpoints: **Webapp `:3030`**, Lakekeeper UI `:8181/ui/`, MinIO console `:9001`, Thrift JDBC `:10000`. With the optional Flink engine: **Flink web UI `:8081`**.
+
+## Flink streaming engine (on by default)
+
+Spark Thrift is the primary engine and runs the whole V3 batch demo. By default
+the stack **also** runs **Apache Flink 1.20**: a second engine that streams rows
+into the same Iceberg catalog while Spark queries them. Two engines, one catalog.
+(Opt out to a Spark-only stack at the deploy menu, or with `ENABLE_FLINK=0` /
+`-var enable_flink=false`.)
+
+### What Flink does here
+
+Flink runs one continuous job. A built-in `datagen` source fabricates synthetic
+trades and an Iceberg sink appends them to `demo.market.trades_stream`. The sink
+commits a new Iceberg snapshot on every checkpoint (~10s), so the table grows in
+visible bursts. It is self-contained, like the rest of the demo. Spark still does
+what it always did: batch DDL/DML, MERGE/CDC, time travel, maintenance. Flink adds
+the one thing batch can't show, a long-running append stream.
+
+The stream emits the **same eight tickers** (`AAPL, MSFT, NVDA, …`) the batch
+table `trades_v3` uses in step 1, so step 19 includes a **temporal join** that
+joins the live stream's last two minutes against that static table on the shared
+symbol — two engines, one catalog, one SQL join.
+
+The stream is **user-triggered**: it does not run on deploy. Open the bonus step
+(**Multi-engine streaming**, step 19) in the webapp and click **▶ Start
+streaming**. That arms a flag file the jobmanager's **resubmit supervisor**
+watches; the supervisor submits the job, resubmits it after a runtime storage
+switch, and the Stop button cancels it. (The supervisor — not `deploy.sh` — owns
+submission, because the webapp can't `docker exec` and there is no Flink SQL
+gateway.)
+
+### Why additive, not a Spark/Flink toggle
+
+The two engines are **not interchangeable**, so this is deliberately *not* an
+either/or switch. `sql/demo.sql` is Spark-dialect: it uses `MERGE INTO`, the
+`range()` table-valued function, Spark's `CALL` maintenance procedures, and
+Spark's `CREATE TABLE ... TBLPROPERTIES` DDL — none of which exist in Flink SQL
+(different `CREATE CATALOG ... WITH (...)` syntax, no `MERGE`, no `range()`,
+different maintenance). A Flink-*replacement* mode would force a thinner
+Flink-only demo and drop roughly half the V3 features. So Flink is purely
+additive: Spark coverage stays complete, and you also get the streaming-interop
+story. Please don't "fix" this back into a toggle.
+
+### The interop story
+
+One Lakekeeper catalog, one MinIO bucket, two engines. Flink writes
+`demo.market.trades_stream`; Spark reads the identical table through the same
+REST catalog. Proof is the row count climbing while Flink runs — query it twice,
+~10s apart:
+
+```bash
+docker exec spark-thrift /opt/spark/bin/beeline \
+  -u jdbc:hive2://localhost:10000 \
+  -e "SELECT count(*) FROM demo.market.trades_stream;"
+```
+
+The count strictly increases between runs. Flink commits, Spark reads, and
+neither knows about the other; they only share the catalog.
+
+### How to choose it
+
+`./deploy.sh` asks interactively, before standing anything up:
+
+```
+================================================================
+  Engine selection
+================================================================
+  Spark Thrift Server is ALWAYS started — it runs the full V3
+  demo (sql/demo.sql): MERGE/CDC, branches, time travel, deletion
+  vectors, maintenance. This is the primary engine.
+
+  You can ALSO add Apache Flink as a second, streaming engine on
+  the SAME Lakekeeper catalog + MinIO bucket. Flink does NOT
+  replace Spark and does NOT re-run the batch demo. Instead it:
+
+    • runs a continuous streaming job (datagen -> Iceberg sink)
+    • appends rows every second to demo.market.trades_stream
+    • commits on each checkpoint (~10s)
+
+  ...while Spark/beeline queries the SAME table and watches the
+  row count climb. This demonstrates multi-engine interop on one
+  Iceberg catalog — two engines, one source of truth.
+
+  Cost: +2 containers (jobmanager, taskmanager), ~3-4 GiB extra
+  RAM. Flink is ON by default; opt out on a host with <12 GiB free.
+================================================================
+
+  1) Spark + Flink streaming   (default)
+  2) Spark only
+
+  Pick [1/2]:
+```
+
+- **Option 1 (default)** is the full Spark + Flink stack: it adds two containers
+  (`flink-jobmanager`, `flink-taskmanager`, ~3–4 GiB RAM), waits for the cluster,
+  verifies the stream commits, and prints the interop check. The streaming job
+  itself is owned by a **resubmit supervisor** inside the jobmanager container,
+  not by `deploy.sh` — see below.
+- **Option 2** is the Spark-only stack (no Flink), byte-for-byte the original
+  single-engine demo. Pick it on a low-RAM host.
+
+Like Spark, Flink now mirrors the storage-agnostic path: `io-impl` is
+`ResolvingFileIO` (dispatches `s3://` to MinIO, `gs://` to GCS) and it requests
+Lakekeeper's **vended credentials** via `rest.access-delegation`, so no static
+GCS key ever reaches the container. The webapp can switch the storage target
+(MinIO ↔ GCS) at runtime, which DROPs and re-registers the warehouse and kills the
+running INSERT. To survive that, the jobmanager container runs a small **resubmit
+supervisor** that reruns the idempotent `stream.sql` whenever no job is live, so
+the stream self-heals against whatever warehouse is currently registered. (Full GCS
+behavior needs a real GCS deploy to verify; the MinIO path and the kill/resubmit
+recovery are verifiable locally.)
+
+Non-interactive runs (CI, piped stdin) skip the prompt and keep the Flink-on
+default. `ENABLE_FLINK=0 ./deploy.sh` (or `-var enable_flink=false`) is the
+silent opt-out to a Spark-only stack without the menu.
+
+Watch the running INSERT job at the **Flink web UI**, `http://localhost:8081`
+(no login — also linked from the webapp home toolbar). Data and metadata land
+under `warehouse/demo/market/trades_stream` in MinIO (`:9001` console).
+
+### Tuning
+
+- **Throughput** — `rows-per-second` in `flink/sql/stream.sql` (default `50`).
+  Raise to stress the sink, lower to slow the climb.
+- **Commit cadence** — `execution.checkpointing.interval` in `flink/config.yaml`
+  (default `10s`). The Iceberg sink makes rows visible to Spark only on a
+  completed checkpoint, so this is also how often the count jumps.
 
 ## Webapp
 
@@ -163,6 +311,8 @@ destroy.sh                          # teardown (terraform destroy + force-remove
 scripts/bootstrap.sh                # MinIO bucket + Lakekeeper warehouse registration
 sql/demo.sql                        # V3 showcase (mounted into spark-thrift at /opt/demo)
 spark/spark-defaults.conf           # Iceberg packages + REST catalog wiring (ResolvingFileIO)
+flink/config.yaml                   # Flink 1.20 cluster config (optional engine; checkpointing, Java-17 opens)
+flink/sql/stream.sql                # Flink streaming job: datagen → demo.market.trades_stream
 webapp/                             # Next.js UI + server routes (storage-aware: MinIO / GCS)
 .demo-state/                        # persisted storage config + SA key (gitignored, mounted → /data)
 ```
@@ -346,6 +496,50 @@ endpoint can briefly return an empty or non-JSON body. The prefix lookup in
 `bootstrap.sh` polls until it gets a parseable response and prints the last body
 if it gives up. If you hit that failure message, the warehouse probably didn't
 register at all (check `docker logs lakekeeper`).
+
+### Flink: `trades_stream` count never grows (no data files)
+
+The Iceberg sink commits a snapshot — and makes rows visible to Spark — **only
+on a completed checkpoint**. Without `execution.checkpointing.interval` the job
+runs, buffers rows, and commits *nothing*; Spark sees an empty table forever.
+`flink/config.yaml` sets a 10s checkpoint interval for exactly this reason —
+don't remove it. Confirm checkpoints are completing at
+`http://localhost:8081` → the job → Checkpoints tab.
+
+### Flink: job loops in `RESTARTING` with `InaccessibleObjectException`
+
+Flink on Java 17 needs `--add-opens`/`--add-exports` JVM flags for its
+Kryo/serialization paths. Mounting `flink/config.yaml` **replaces** the image's
+default config, which ships those flags, so `config.yaml` re-supplies them under
+`env.java.opts.all`. If you trim that block, the streaming job dies every
+checkpoint with `java.lang.reflect.InaccessibleObjectException: ... module
+java.base does not "opens java.util"`.
+
+### Flink: `CREATE CATALOG` throws `ClassNotFoundException` for Hadoop
+
+`java.lang.ClassNotFoundException: org.apache.hadoop.conf.Configuration` on the
+`CREATE CATALOG` statement means the Hadoop classes aren't on the classpath. The
+`flink:1.20` image ships no Hadoop and `iceberg-flink-runtime` doesn't shade it,
+so `main.tf` stages `flink-shaded-hadoop-2-uber` into `/opt/flink/lib` alongside
+the Iceberg jars. If you change the jar-staging loop, keep that jar.
+
+### Flink: host runs out of memory with both engines
+
+Spark already takes ~4 GiB on a 7.65 GiB Docker host; the two Flink containers
+add ~3.6 GiB (`jobmanager.memory.process.size` 1600m + `taskmanager` 2g in
+`config.yaml`). On a tight laptop, either give Docker more RAM (>12 GiB
+recommended for the combined stack) or drop `spark.driver.memory` in
+`spark/spark-defaults.conf` when co-running.
+
+### Flink: V3 write features
+
+The streaming table is **format-version 3, append-only** — the same V3 line Spark
+uses everywhere else in the demo. Flink 1.20 (iceberg-flink-runtime 1.11.0) writes
+the V3 appends, and Spark reads back the V3 **row lineage**: each row carries a
+`_row_id` and `_last_updated_sequence_number` the sink assigned. Because the stream
+only appends, there are no deletion vectors on this table. The piece that's still a
+stretch goal is the streaming *write* side of deletes: Flink equality-delete upserts
+into a V3 stream.
 
 ---
 
